--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "additional_special_tokens": ["history: ", "speaker1: ", "speaker2: "],
     "num_proc": 8,
     "dataset_name": "under-tree/prepared-yagpt",
+    "model_name": "yagpt",
     "block_size": 128,
     "batch_size": 8
 }
