--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 args:
   dataset: "under-tree/prepared-yagpt"
   special_tokens: 
-    history: "<|history|>"
+    history: ""
     speaker1: "<|speaker1|>"
     speaker2: "<|speaker2|>"
   num_proc: 4
